Continuing major refactor